# was-cli

./: LICENSE  README.md  differ.py  extractor.py  history.py  install.sh  main.py  patcher.py  pyproject.toml  setup.py  uninstall.sh
.github/workflows/: test.yml
tests/: test_differ.py  test_extractor.py  test_history.py  test_patcher.py
was/: __init__.py  __main__.py  cli.py  differ.py  extractor.py  history.py  patcher.py
