[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "was-cli"
version = "1.4.0"
description = "A document time machine CLI — version control for personal documents and study notes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
authors = [{name = "YOUR_NAME"}]
keywords = ["version-control", "documents", "notes", "timeline", "snapshot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

[project.scripts]
was = "was.cli:main"

[tool.setuptools.packages.find]
include = ["was*"]